# starcraft_study

./: .gitignore  CMakeLists.txt  README.md  init.bat  init.sh
inc/: CMakeLists.txt  Marine.cpp  Marine.h  PhotonCannon.cpp  PhotonCannon.h
src/: CMakeLists.txt  main.cpp
